# kubernetes

./: .gitignore
BKP/: main.yaml  metallb-service.yaml  metallb.yaml
BKP/MetalLB/argocd/: install.yaml
BKP/MetalLB/helm/: expose_portainer.yaml  installer.sh
BKP/study/: ingress.yaml  ingressx.yaml  nginx.yaml  nginxy.yaml  service-nginx.yaml  service.yaml  service_account_nginx.yaml
DeployTest/: Dockerfile  docker_build.sh  main.py  pyproject.toml  requirements.txt
DeployTest/kubernetes/: main-nginx.yaml  main.yaml  test.yaml
DeployTest/locust/: main.py
personal-cluster/: readme.md
personal-cluster/MetricsServer/: readme.md  run.sh
personal-cluster/ansible/: hosts.yaml  install-k3s.yaml  k3s_token.yaml  playbook.yaml  remove-k3s.yaml
personal-cluster/deploys/: deploy-exemple.yaml  run.sh
personal-cluster/deploys/cloudflare-tunnel/: deploy-tunnel-kuma.yaml  deploy-tunnel-pihole.yaml
personal-cluster/deploys/kuma/: deploy-kuma-service.yaml  deploy-kuma-volume.yaml
personal-cluster/deploys/pihole/: deploy-pihole-deployment.yaml  deploy-pihole-pod.yaml  deploy-pihole-service.yaml  deploy-pihole-volume.yaml
personal-cluster/ingress/: ingress-nginx.yaml  run.sh
personal-cluster/metallb/: config.yaml  run.sh
