[tool.poetry]
name = "deploytest"
version = "0.1.0"
description = "Application To Test Deploys"
authors = ["NIKORASU <nicolas.mmb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
